--- a/survey-config/SURVEY-SERVICE.yaml
+++ b/survey-config/SURVEY-SERVICE.yaml
@@ -22,6 +22,6 @@ server:
 
 springdoc:
   api-docs:
-    path: /v3/api-docs
+    path: SURVEY-SERVICE/swagger-ui/index.html
   swagger-ui:
     path: /swagger-ui.html
